--- a/report/references.bib
+++ b/report/references.bib
@@ -5,3 +5,17 @@
       year = {2011},
       url = {https://eprint.iacr.org/2011/449}
 }
+
+@misc{wikipedia_bipartite_graph,
+  author = {Wikipedia},
+  title = {Bipartite graph},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Bipartite_graph}},
+  note = {Accessed: 2024-12-15}
+}
+
+@misc{wikipedia_meet_in_the_middle,
+  author = {Wikipedia},
+  title = {Meet-in-the-middle attack},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Meet-in-the-middle_attack}},
+  note = {Accessed: 2024-12-15}
+}
