--- a/report/main.tex
+++ b/report/main.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx} % Required for inserting images
 
 \usepackage{cite}
+\usepackage{caption}
 
 \usepackage{graphicx}
 \usepackage{svg}
@@ -293,27 +294,25 @@ Each round consists of four transformations:
     \item \textbf{AddRoundKey}: Adds a subkey derived from the master key.
 \end{itemize}
 
-In the last round, the \textbf{MixColumns} operation is omitted.
-
-To conduct the biclique attack on AES 128, the authors \cite{bogdanov2011biclique} focused on two internal states in each round: the state before the \textbf{SubBytes} and the state after \textbf{MixColumns}.
+In the last round, the \textbf{MixColumns} operation is omitted. To conduct the biclique attack on AES 128, the authors \cite{bogdanov2011biclique} focused on two internal states in each round: the state before the \textbf{SubBytes} and the state after \textbf{MixColumns}.
 
  \subsubsection{Paradigms of Key Recovery}
- In the developing the attack, the authors (reference) presented two paradigms for key recovery after successful construction of the bicliques. Long Biclique and Independent Biclique. The optimal choice depends on the cryptographic primitive, its diffusion properties and the key schedule. The AES attack uses the Independent Biclique but we will briefly describe both paradigms below.
- \subsubsection{Independent Biclique}
+ In the developing the attack, the authors\cite{bogdanov2011biclique} presented two paradigms for key recovery after successful construction of the bicliques. Long Biclique and Independent Biclique. The optimal choice depends on the cryptographic primitive, its diffusion properties and the key schedule. The AES attack uses the Independent Biclique but we will briefly describe both paradigms below.
+ \subsubsection{Independent Biclique\cite{bogdanov2011biclique}}
  This technique exploits the diffusion properties of the cipher rather than the differential properties. It does not aim to construct the longest biclique. Instead, it proposes constructing shorter bicliques with high dimensions using independent related-key differentials. The independent biclique provides the following advantages:
  \begin{enumerate}
-    \item 1.	Low Data Complexity: Since the biclique covers a small portion of the cipher, the adversary gains more flexibility to impose constraints on the ciphertext. This allows the attack to restrict the ciphertext to a smaller, specific set, reducing the data complexity of the attack.
-    \item 2.	Efficient Computation: The approach reduces the complexity of constructing the biclique itself since it leverages precomputations to match intermediate states.
+    \item Low Data Complexity: Since the biclique covers a small portion of the cipher, the adversary gains more flexibility to impose constraints on the ciphertext. This allows the adversary to restrict the ciphertext to a smaller, specific set, reducing the data complexity of the attack.
+    \item Efficient Computation: The approach reduces the complexity of constructing the biclique itself since it leverages precomputations to match intermediate states.
  \end{enumerate}
 
- \subsubsection{Long Biclique}
+ \subsubsection{Long Biclique\cite{bogdanov2011biclique}}
  Assuming there are $r$ rounds of the primitive, the adversary applies the MITM attack to $m$ number of rounds to recover $m$ partial keys. The long biclique approach aims to construct a biclique over the remaining $r-m$ rounds, to recover the full keys. However, the disadvantage of this paradigm is that the construction of bicliques over many rounds is difficult due to diffusion and non-linear properties of the cipher, limiting the total number of rounds that can be attacked.
 
 
  \subsection{Steps of the Key Recovery for the Full AES-128 using Independent Bicliques}
 The goal of the adversary is to recover the full AES-128 key. In this attack, rounds 1 to 7 is attacked using the MITM and rounds 8 to 10 using the independent biclique. Details of the attack are outlined in the steps below; 
  \begin{enumerate}[start = 1, label={(\bfseries Step\arabic*):}]
-    \item \textbf{Key Partitioning} \\ The adversary partitions the $2^{128}$ key space into smaller groups. The focus is on subkey 8 ($K_8$) because the biclique attack starts from round 8. The AES master key maps bijectively (one-to-one) to all the subkeys including $K_8$. This means that the subkey 8 can directly map back to the master key $K$.
+    \item \textbf{Key Partitioning\cite{bogdanov2011biclique}} \\ The adversary partitions the $2^{128}$ key space into smaller groups. The focus is on subkey 8 ($K_8$) because the biclique attack starts from round 8. The AES master key maps bijectively (one-to-one) to all the subkeys including $K_8$. This means that the subkey 8 can directly map back to the master key $K$.
 
     The key partitioning step is as follows:
     
@@ -353,10 +352,10 @@ The goal of the adversary is to recover the full AES-128 key. In this attack, ro
             * & * & * & *
             \end{pmatrix}
             \end{align*}
-        \item Starting from each base key $K[0,0]$, the adversary introduces small differences $i$ and $j$ in the two fixed bytes. Each byte difference $i$ or $j$ can take $2^8$ values. Since there are 2 bytes, the total combinations are: $2^8 K[1,0]$ and $2^8 K[0,j]$ which gives $2^{16}$ keys $K[i,j]$ per group. Meaning for each base key, there are a group of $2^{16}$ keys.
+        \item Starting from each base key $K[0,0]$, the adversary introduces small differences $i$ and $j$ in the two fixed bytes. Each byte difference $i$ or $j$ can take $2^8$ values. Since there are 2 bytes, the total combinations are: $2^8 K[i,0]$ and $2^8 K[0,j]$ which gives $2^{16}$ keys $K[i,j]$ per group. Meaning for each base key, there are a group of $2^{16}$ keys.
 
     \end{enumerate}
-    \item \textbf{Biclique Construction}\\The adversary now constructs a 3-round biclique using the combined related key differentials discussed in \textbf{section 3}. The requirement for using this technique is that the forward- and backward-differential trails that need to be combined, do not share any active non-linear elements. This is achieved through the key partitioning step where the differential trails $\Delta_i$ using the keys $K[i,0]$ never share any active S-boxes, with the differential trails $\nabla_j$ using the key $K[0,j]$ (wikipedia). The biclique is constructed as follows:
+    \item \textbf{Biclique Construction\cite{bogdanov2011biclique}}\\The adversary now constructs a 3-round biclique using the combined related key differentials discussed in \textbf{\nameref{sec:constructing_bicliques}}. The requirement for using this technique is that the forward- and backward-differential trails that need to be combined, do not share any active non-linear elements. This is achieved through the key partitioning step where the differential trails $\Delta_i$ using the keys $K[i,0]$ never share any active S-boxes, with the differential trails $\nabla_j$ using the key $K[0,j]$ \cite{wikipedia_biclique_attack}. The biclique is constructed as follows:
 
     \begin{enumerate}
         \item With the chosen base key $K[0,0]$ from step 1, the adversary fixes the ciphertext $C_0$ to 0 and derives the intermediate state, $S_0$ by performing an inverse round function on $C_0$:
@@ -370,7 +369,7 @@ The goal of the adversary is to recover the full AES-128 key. In this attack, ro
         \item The adversary combines the two differentials $\Delta_i$ and $\nabla_j$ to generate an $8 \times 8$ biclique i.e an 8-dimension biclique. The adversary observes that the $\Delta_i$-differentials only affect 12 bytes of the ciphertext, leaving some bytes unchanged. For example Bytes $C_0, C_1, C_4$, and $C_{13}$ remain constant. Similarly, the bytes $C_{10}$ and $C_{14}$ are always equal due to specific properties of the key differences, $\Delta K_i$.
     \end{enumerate}
 
-    \item \textbf{Forward and Backward Computations}\\
+    \item \textbf{Forward and Backward Computations\cite{bogdanov2011biclique}}\\
     \begin{enumerate}
         \item \textbf{Forward Computation:} For each plaintext $P_i$, the adversary computes the intermediate state $v$ under different keys $K[i,j]$. The influence of the key difference $K[i,j]$ and $K[i,0]$ determines the changes to the intermediate states.
         
@@ -379,14 +378,14 @@ The goal of the adversary is to recover the full AES-128 key. In this attack, ro
         \end{equation}
     
         \item \textbf{Backward Computation:} For the Ciphertext $S_j$, the adversary computes the intermediate state $v$. The backward computation is determined by the influence of the difference between keys $K[i,j]$ and $K[0,j]$.
-        
+        \begin{equation}
+            \overleftarrow{v} \xleftarrow{K[i, j]} S_j \quad \quad \overleftarrow{v}_j \xleftarrow{K[0, j]} S_j       
+        \end{equation}
     \end{enumerate}
     Due to \textbf{low diffusion} in the AES key schedule, only a small number of bytes i.e. 9 bytes differ, which minimizes the recomputation cost.
-\begin{equation}
-    \leftrightarrow \xrightarrow{K[i,j]} S_j \quad \leftrightarrow \xrightarrow{K[0,j]} S_j
-\end{equation}
 
- \item \textbf{Matching over 7 rounds}\\The adversary checks whether the secret key $K_{secret}$ belongs to the key group $K[i, j]$ using a \textbf{partial matching approach}:
+
+ \item \textbf{Matching over 7 rounds\cite{bogdanov2011biclique}}\\The adversary checks whether the secret key $K_{secret}$ belongs to the key group $K[i, j]$ using a \textbf{partial matching approach}:
 
  \begin{enumerate}
      \item Precompute and store intermediate states $v$.
@@ -396,13 +395,13 @@ The goal of the adversary is to recover the full AES-128 key. In this attack, ro
  To attain a candidate key, the adversary matches the \textbf{forward} intermediate states from plaintexts with the \textbf{backward} intermediate states from ciphertexts at the same position $v$.
  
  \subsection{Results of the attack}
- The Biclique attack on the full AES-128 achieves a key recovery with computational complexity about $2^{126.18}$, data complexity $2^{88}$, memory complexity $2^8$, and success probability 1.
+ The Biclique attack on the full AES-128 achieves a key recovery with computational complexity about $2^{126.18}$, data complexity $2^{88}$, memory complexity $2^8$, and success probability of 1.\cite{bogdanov2011biclique}
  
  \end{enumerate}
 
  \section{Reduced Implementation of the Attack on AES}
- In this section, we present a reduced implementation of the biclique attack on AES-128. The implementation is designed to demonstrate the key concepts and steps involved in the biclique attack, as described in the previous sections. implementation demonstrates a simplified version of the biclique attack on AES-128, focusing on rounds 8-10 of the cipher. The implementation is written in C and consists of several key components that work together to perform the attack.
- The source code is available at \href{https://github.com/MortazaHassani/Biclique-Attack-on-AES-128/}{Github repository}. 
+ In this section, we present a reduced implementation of the biclique attack on AES-128. The implementation is designed to demonstrate the key concepts and steps involved in the biclique attack, as described in the previous sections. This implementation demonstrates a simplified version of the biclique attack on AES-128. The implementation is written in C and consists of several key components that work together to perform the attack.
+ The source code is available in the \href{https://github.com/MortazaHassani/Biclique-Attack-on-AES-128/}{Github repository}. 
  \subsection{Implementation Structure}
 The implementation is organized into three main files:
 \begin{itemize}
@@ -412,7 +411,7 @@ The implementation is organized into three main files:
 \end{itemize}
 
 \begin{center}
-    \begin{tikzpicture}[node distance=1.5cm]
+    \begin{tikzpicture}[node distance=1.3cm]
     
         % Nodes
         \node (start) [draw, fill=lightblue, rounded corners, text centered, minimum height=1cm, minimum width=2cm] {Start};
@@ -431,6 +430,7 @@ The implementation is organized into three main files:
         }
         
     \end{tikzpicture}
+    \captionof{figure}{ Biclique Structure}
 \end{center}
 
 \subsection{Key Components}
@@ -455,7 +455,7 @@ The biclique construction is implemented in the \texttt{createBiclique} function
 \end{enumerate}
 
 \begin{center}
-    \begin{tikzpicture}[node distance=1.5cm]
+    \begin{tikzpicture}[node distance=1.3cm]
 
         % Nodes
         \node (start) [draw, fill=lightblue, rounded corners, text centered, minimum height=1cm, minimum width=2cm] {Start};
@@ -473,6 +473,7 @@ The biclique construction is implemented in the \texttt{createBiclique} function
         }
         
     \end{tikzpicture}
+    \captionof{figure}{ Biclique Attack}
 \end{center}
 
 
@@ -482,8 +483,8 @@ The attack follows these main steps:
 \subsubsection{1. Precomputation Phase}
 Two main precomputation functions are implemented:
 \begin{itemize}
-    \item \texttt{precompute\_P2v}: Computes forward transitions from plaintexts
-    \item \texttt{precompute\_S2v}: Computes backward transitions from states
+    \item \texttt{precompute\_P2v}: Computes forward transitions from plaintexts to intermediate state
+    \item \texttt{precompute\_S2v}: Computes backward transitions from ciphertext to intermediate state
 \end{itemize}
 
 The precomputation reduces the computational complexity by storing intermediate results that can be reused during the attack.
@@ -501,10 +502,13 @@ The \texttt{testCandidateKeys} function verifies potential key candidates by:
 \begin{enumerate}
     \item Decrypting ciphertexts using candidate keys
     \item Comparing results with known plaintexts
-    \item Identifying matching keys as potential solutions
+    \item Identifying matching keys as potential candidate keys
 \end{enumerate}
+\begin{center}
+    \includesvg{figures/keyflow.svg}
+    \captionof{figure}{Key Recovery Flow}    
+\end{center}
 
-\includesvg{figures/keyflow.svg}
 \begin{verbatim}
 %% Output sample: Vi=Vj
 ---
@@ -547,6 +551,10 @@ The implementation includes a validation function \texttt{validateAESImplementat
 
 Test results demonstrate successful attack for key recovery for the implemented rounds, though with higher computational complexity than theoretical bounds due to implementation simplifications. Although there has not been any successful recovery of key achieved by this code, several factors impacts this including computation limitations and possible mistakes during implementation.
 
+\section{Conclustion}
+Conclusion
+This report explored the biclique attack on the full AES-128, demonstrating how advanced cryptanalysis techniques can marginally improve key recovery efficiency to 
+$2^126.18$. By leveraging independent-biclique structures and related-key differentials, the attack systematically reduces computational complexities compared to brute force. However, this attack remains theoretical due to constraints in computational resources. We attempted to implement a reduced version of the attack in code; however, the implementation did not succeed in recovering the key candidates due to possible mistakes in implementation and the high computational complexity of the attack. This study provided valuable insights into the complexities of the biclique attack and its application to AES-128.
 
 \bibliographystyle{plain} % You can choose other styles like IEEEtran, alpha, etc.
 \bibliography{references}
