--- a/report/references.bib
+++ b/report/references.bib
@@ -10,12 +10,17 @@
   author = {Wikipedia},
   title = {Bipartite graph},
   howpublished = {\url{https://en.wikipedia.org/wiki/Bipartite_graph}},
-  note = {Accessed: 2024-12-15}
 }
 
 @misc{wikipedia_meet_in_the_middle,
   author = {Wikipedia},
   title = {Meet-in-the-middle attack},
   howpublished = {\url{https://en.wikipedia.org/wiki/Meet-in-the-middle_attack}},
-  note = {Accessed: 2024-12-15}
+
+}
+@misc{wikipedia_biclique_attack,
+  author = {Wikipedia},
+  title = {Biclique attack},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Biclique_attack}},
+
 }
