updated report v1.3 final final

--- a/report/main.tex
+++ b/report/main.tex
@@ -257,7 +257,7 @@ If the trails of the differentials do not share any active non-linear components
             \begin{equation}
                 \exists i, j : S_j \xleftarrow[f]{K[i, j]} C_i.
             \end{equation}
-    \item \textbf{Matching with Precomputations} For each key candidate, $K[i, j]$, the adversary evaluates the cipher directly to check if the computed intermediate states and ciphertexts match the expected results for the given plaintext-ciphertext pair. A valid pair proposes $K[i, j]$ as a key candidate.
+    \item \textbf{Matching without Precomputations} For each key candidate, $K[i, j]$, the adversary evaluates the cipher directly to check if the computed intermediate states and ciphertexts match the expected results for the given plaintext-ciphertext pair. A valid pair proposes $K[i, j]$ as a key candidate.
 
 
  \end{enumerate}
